data/derived/comb/progs/unify/prog7784.ml.out
Characters 190-194:
  | Average (x, y) -> "(("exprToString e ^ "+" ^ exprToString e ")"/2")"
                      ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
